tests/data/specs/invalid/BadCasing.rflx
package BadCasing is

end BadCasing;
